working on notebook

--- a/notebooks/QNM-lattice.ipynb
+++ b/notebooks/QNM-lattice.ipynb
@@ -7,26 +7,339 @@
    "source": [
     "# Quadratic QNMs\n",
     "\n",
-    "For all linear QNMs that are generated $\\{\\omega_I\\}$, we have the generation of all QNMs of the form $\\{\\omega+\\}$"
+    "### Background\n",
+    "\n",
+    "Let us consider wave perturbations to the metric subject to in going and outgoing boundary conditions. To quadratic order we will have solutions to the following equations [from this paper](https://arxiv.org/pdf/2208.07379.pdf):\n",
+    "\n",
+    "$$\n",
+    "\\mathscr{D} h^{(1)} \\sim 0 \\quad, \\quad \\mathscr{D} h^{(2)} \\sim h^{(1) 2}\n",
+    "$$\n",
+    "\n",
+    "where the first equation is the one that defines the standard set of linear QNMs $\\{\\omega_I\\}$. If we expand the metric:\n",
+    "\n",
+    "$$\n",
+    "h = h^{(0)} + \\eta h^{(1)} + \\eta^2 h^{(2)} + ...\n",
+    "$$\n",
+    "\n",
+    "and if $\\eta$ is not sufficiently small enough to suppress $h^2$ compared to $h^1$ (I think), then modes that make up $h^{(2)}$ are not ignorable. This set of Quasinormal modes are called the Quadratic Quasinormal Modes or QQNMs \n",
+    "\n",
+    "If we work through the algebra (or look at [point (1.) on pg 2 in this paper](https://arxiv.org/pdf/2208.07379.pdf)) we will find that the set of QQNMs are defined by:\n",
+    "\n",
+    "$$\n",
+    "\\textrm{QQNMs} := \\{ \\Re[\\omega_I] \\pm \\Re[\\omega_J] + i(\\Im[\\omega_I] + \\Im[\\omega_J]) \\ \\ \\forall\\ \\omega_I, \\omega_J \\in \\textrm{Linear QNMs}\\}\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "# Visualization\n",
+    "\n",
+    "#### Initialization"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "20527e29-b843-483c-81c9-d552736fc774",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import qnm"
+    "import qnm\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "def CalculateQNMs(df, a):\n",
+    "    get_QNMs = lambda a : (lambda x: x['qnm_object'](a=a)[0])\n",
+    "    df['omega'] = df.apply(get_QNMs(0.5), axis=1)\n",
+    "    df['omega_R'] = np.real(df['omega'])\n",
+    "    df['omega_I'] = np.imag(df['omega'])\n",
+    "    df['f'] = df['omega_R']/(2*np.pi)\n",
+    "    df['gamma'] = df['omega_I']\n",
+    "    df['tau'] = -1/df['gamma']\n",
+    "    return df.drop('qnm_object', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "390cfc14-f52f-4f6d-9adc-916ab503f06d",
+   "metadata": {},
+   "source": [
+    "#### Create the list of modes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "9031a7f6-9946-478c-b99a-b3438a81ac0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = -2;\n",
+    "l_s = [2, 3, 4]\n",
+    "n_s = [0, 1, 2]\n",
+    "\n",
+    "modes = [];\n",
+    "for l in l_s:\n",
+    "    for m in range(-l, l+1,1):\n",
+    "        for n in n_s:\n",
+    "            mode_params = {'s':s, 'l': l, 'm': m, 'n': n}\n",
+    "            mode_params.update({'qnm_object': qnm.modes_cache(**mode_params)})\n",
+    "            mode_params.update({'mode': \",\".join([str(val) for val in [l,m,n]])})\n",
+    "            modes.append(mode_params)\n",
+    "            \n",
+    "df = pd.DataFrame(modes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "1eda3a02-b18d-461f-b374-6899c779cd72",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>s</th>\n",
+       "      <th>l</th>\n",
+       "      <th>m</th>\n",
+       "      <th>n</th>\n",
+       "      <th>mode</th>\n",
+       "      <th>omega</th>\n",
+       "      <th>omega_R</th>\n",
+       "      <th>omega_I</th>\n",
+       "      <th>f</th>\n",
+       "      <th>gamma</th>\n",
+       "      <th>tau</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>-2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2,2,0</td>\n",
+       "      <td>0.464123-0.085639j</td>\n",
+       "      <td>0.464123</td>\n",
+       "      <td>-0.085639</td>\n",
+       "      <td>0.073867</td>\n",
+       "      <td>-0.085639</td>\n",
+       "      <td>11.676945</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>-2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3,3,0</td>\n",
+       "      <td>0.740921-0.088676j</td>\n",
+       "      <td>0.740921</td>\n",
+       "      <td>-0.088676</td>\n",
+       "      <td>0.117921</td>\n",
+       "      <td>-0.088676</td>\n",
+       "      <td>11.276976</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>-2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4,4,0</td>\n",
+       "      <td>1.003396-0.090268j</td>\n",
+       "      <td>1.003396</td>\n",
+       "      <td>-0.090268</td>\n",
+       "      <td>0.159695</td>\n",
+       "      <td>-0.090268</td>\n",
+       "      <td>11.078138</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>-2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2,2,1</td>\n",
+       "      <td>0.447407-0.260225j</td>\n",
+       "      <td>0.447407</td>\n",
+       "      <td>-0.260225</td>\n",
+       "      <td>0.071207</td>\n",
+       "      <td>-0.260225</td>\n",
+       "      <td>3.842835</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>-2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3,3,1</td>\n",
+       "      <td>0.731221-0.267630j</td>\n",
+       "      <td>0.731221</td>\n",
+       "      <td>-0.267630</td>\n",
+       "      <td>0.116378</td>\n",
+       "      <td>-0.267630</td>\n",
+       "      <td>3.736508</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61</th>\n",
+       "      <td>-2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4,4,1</td>\n",
+       "      <td>0.996209-0.271733j</td>\n",
+       "      <td>0.996209</td>\n",
+       "      <td>-0.271733</td>\n",
+       "      <td>0.158552</td>\n",
+       "      <td>-0.271733</td>\n",
+       "      <td>3.680080</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>-2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2,2,2</td>\n",
+       "      <td>0.417925-0.443287j</td>\n",
+       "      <td>0.417925</td>\n",
+       "      <td>-0.443287</td>\n",
+       "      <td>0.066515</td>\n",
+       "      <td>-0.443287</td>\n",
+       "      <td>2.255876</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>-2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3,3,2</td>\n",
+       "      <td>0.713145-0.451103j</td>\n",
+       "      <td>0.713145</td>\n",
+       "      <td>-0.451103</td>\n",
+       "      <td>0.113501</td>\n",
+       "      <td>-0.451103</td>\n",
+       "      <td>2.216787</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>-2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4,4,2</td>\n",
+       "      <td>0.982419-0.455890j</td>\n",
+       "      <td>0.982419</td>\n",
+       "      <td>-0.455890</td>\n",
+       "      <td>0.156357</td>\n",
+       "      <td>-0.455890</td>\n",
+       "      <td>2.193511</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    s  l  m  n   mode               omega   omega_R   omega_I         f  \\\n",
+       "12 -2  2  2  0  2,2,0  0.464123-0.085639j  0.464123 -0.085639  0.073867   \n",
+       "33 -2  3  3  0  3,3,0  0.740921-0.088676j  0.740921 -0.088676  0.117921   \n",
+       "60 -2  4  4  0  4,4,0  1.003396-0.090268j  1.003396 -0.090268  0.159695   \n",
+       "13 -2  2  2  1  2,2,1  0.447407-0.260225j  0.447407 -0.260225  0.071207   \n",
+       "34 -2  3  3  1  3,3,1  0.731221-0.267630j  0.731221 -0.267630  0.116378   \n",
+       "61 -2  4  4  1  4,4,1  0.996209-0.271733j  0.996209 -0.271733  0.158552   \n",
+       "14 -2  2  2  2  2,2,2  0.417925-0.443287j  0.417925 -0.443287  0.066515   \n",
+       "35 -2  3  3  2  3,3,2  0.713145-0.451103j  0.713145 -0.451103  0.113501   \n",
+       "62 -2  4  4  2  4,4,2  0.982419-0.455890j  0.982419 -0.455890  0.156357   \n",
+       "\n",
+       "       gamma        tau  \n",
+       "12 -0.085639  11.676945  \n",
+       "33 -0.088676  11.276976  \n",
+       "60 -0.090268  11.078138  \n",
+       "13 -0.260225   3.842835  \n",
+       "34 -0.267630   3.736508  \n",
+       "61 -0.271733   3.680080  \n",
+       "14 -0.443287   2.255876  \n",
+       "35 -0.451103   2.216787  \n",
+       "62 -0.455890   2.193511  "
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_corotating = lambda x: x['l'] == x['m']\n",
+    "is_head_on = lambda x: x['m'] == 0\n",
+    "    \n",
+    "all_modes = CalculateQNMs(df, 0.5).sort_values('tau', ascending=False)\n",
+    "all_modes[all_modes.apply(is_corotating, axis=1)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "fc949b75-2054-42e8-a339-535b14155faa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1,2,4'"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\",\".join([str(1),str(2),str(4)])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9031a7f6-9946-478c-b99a-b3438a81ac0e",
+   "id": "fdd5547e-154f-44e4-9a17-4bf7f43a4d89",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "l=2 must be >= l_min=3",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [34]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mqnm\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmodes_cache\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43ml\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mm\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mn\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Documents/GitHub/Nonlinear-QNM-exploration/environments/notebook-venv/lib/python3.8/site-packages/qnm/cached.py:342\u001b[0m, in \u001b[0;36mKerrSeqCache.__call__\u001b[0;34m(self, s, l, m, n, compute_if_not_found, compute_pars)\u001b[0m\n\u001b[1;32m    304\u001b[0m \u001b[38;5;124;03m\"\"\"Load a :class:`qnm.spinsequence.KerrSpinSeq` from the cache\u001b[39;00m\n\u001b[1;32m    305\u001b[0m \u001b[38;5;124;03mor from disk if available.\u001b[39;00m\n\u001b[1;32m    306\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    338\u001b[0m \n\u001b[1;32m    339\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    341\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (l \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m l_min(s, m)):\n\u001b[0;32m--> 342\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124ml=\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m must be >= l_min=\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    343\u001b[0m                      \u001b[38;5;241m.\u001b[39mformat(l, l_min(s, m)))\n\u001b[1;32m    345\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (n \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m):\n\u001b[1;32m    346\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mn=\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m must be non-negative\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(n))\n",
+      "\u001b[0;31mValueError\u001b[0m: l=2 must be >= l_min=3"
+     ]
+    }
+   ],
+   "source": [
+    "qnm.modes_cache(s=-2,l=2,m=2,n=0)"
+   ]
   }
  ],
  "metadata": {
