--- a/notebooks/Quadratic-QNM-Visualisations.ipynb
+++ b/notebooks/Quadratic-QNM-Visualisations.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Quadratic QNM Visualizations\n",
     "\n",
-    "### Background\n",
+    "## Background\n",
     "\n",
     "Let us consider wave perturbations to the metric subject to in going and outgoing boundary conditions. To quadratic order we will have solutions to the following equations [from this paper](https://arxiv.org/pdf/2208.07379.pdf):\n",
     "\n",
@@ -78,7 +78,7 @@
    "id": "390cfc14-f52f-4f6d-9adc-916ab503f06d",
    "metadata": {},
    "source": [
-    "#### Create the list of modes\n",
+    "## Create the list of modes\n",
     "\n",
     "Set the parameters of $(s,l,m,n)$ that we want to restrict to. Here we also choose the "
    ]
@@ -103,7 +103,7 @@
    "id": "ff1b5622-218f-48d3-b1f0-847ef82b0033",
    "metadata": {},
    "source": [
-    "#### Define the functions to make plots"
+    "## Define the functions to make plots"
    ]
   },
   {
@@ -168,7 +168,8 @@
    "id": "d8e05e02-477c-48e1-bd00-ab90aed8d710",
    "metadata": {},
    "source": [
-    "# $\\omega_R$ vs $-\\omega_I$"
+    "# Visualizations\n",
+    "## $\\omega_R$ vs $-\\omega_I$"
    ]
   },
   {
@@ -276,7 +277,7 @@
    "id": "201dee78-aee2-4afd-b878-45c84856d473",
    "metadata": {},
    "source": [
-    "# $f$ vs $\\tau$\n",
+    "## $f$ vs $\\tau$\n",
     "Then lets plot $f$ in Hz vs $\\tau$ in ms for a given Mass and spin"
    ]
   },
